--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Reset */
 body {
     margin: 0;
     padding: 0;
@@ -1140,12 +1139,13 @@ textarea:focus {
 }
 
 .create-btn {
-    padding: 13px 7px;
-    background-color: #5c3bff;
+    padding: 8px 11px;
+    background-color: #00BCD4;
     color: #333;
     font-size: 18px;
     border: none;
     border-radius: 8px;
+    font-weight: bold;
     cursor: pointer;
     /* transition: 0.3s; */
     /* font-weight: bold; */
